Fix richtext focus menu margin issue on firefox

--- a/static/less/richtext.less
+++ b/static/less/richtext.less
@@ -290,6 +290,12 @@
         float: left;
 
     }
+
+    @-moz-document url-prefix() {
+        .ProseMirror-menubar {
+            margin-top: -26px;
+        }
+    }
 }
 
 .ProsemirrorEditor {
